# rag

./: .coverage  .cursorrules  .envrc  .gitignore  AGENTS.md  ASYNC_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTABILITY_IMPROVEMENTS.md  TESTING_STRATEGY.md  TEST_RESTRUCTURE_PLAN.md  TODO.md  check.sh  commit_msg.txt  demo_clean_api.py  embeddings.yaml  pipeline_state.db  pyproject.toml  temp_commit.txt  vulture.toml
.cache/: documents.db  index_metadata.db
.github/workflows/: ci.yml  docs.yml  integration.yml
docs/: Makefile  mcp_usage.md
docs/design_sketches/: mcp_server_integration.md
docs/source/: api_http.md  api_python.rst  architecture.md  cli_reference.md  conceptual_overview.md  conf.py  customizing_prompts.md  evaluation_framework.md  getting_started.md  incremental_indexing.md  index.rst  machine_readable_output.md  mcp_server.md  mcp_usage.md  project_overview.md  swap_vector_store.md  testing.md
scripts/: check  check.py  diff_api.py  generate_docs.py  generate_synthetic_qa.py  list_unresolved_comments  run_tests.py  sync_todo_to_issues.py  upload_beir_dataset.py
src/aiostream/: __init__.py  stream.py
src/rag/: __init__.py  __main__.py  auth.py  cli.py  config.py  engine.py  factory.py  index_meta.py  ingest.py  mcp_server.py  mcp_tools.py  rag_engine.py  tui.py
src/rag/caching/: __init__.py  cache_orchestrator.py
src/rag/chains/: rag_chain.py
src/rag/cli/: __init__.py  cli.py  output.py
src/rag/config/: __init__.py  components.py  dependencies.py  main.py
src/rag/data/: __init__.py  chunking.py  document_loader.py  document_processor.py  fakes.py  metadata_extractor.py  protocols.py  text_splitter.py
src/rag/embeddings/: __init__.py  batching.py  embedding_provider.py  embedding_service.py  fake_openai.py  fakes.py  model_map.py  protocols.py
src/rag/evaluation/: __init__.py  retrieval.py  types.py
src/rag/indexing/: __init__.py  document_indexer.py
src/rag/integration/: __init__.py  pipeline_adapter.py
src/rag/mcp/: __init__.py  server.py
src/rag/pipeline/: __init__.py  base.py  embedders.py  factory.py  fakes.py  models.py  pipeline.py  processors.py  storage.py  transformers.py  transitions.py
src/rag/pipeline_state/: __init__.py  factory.py  fakes.py  models.py  pipeline.py  processors.py  storage.py  transitions.py
src/rag/prompts/: __init__.py  registry.py
src/rag/querying/: __init__.py  query_engine.py
src/rag/retrieval/: __init__.py  hybrid.py  hybrid_retriever.py  multivector_retriever.py  query_engine.py  reranker.py  result_processor.py
src/rag/scripts/: upload_beir_dataset.py
src/rag/sources/: __init__.py  base.py  fakes.py  filesystem.py
src/rag/storage/: __init__.py  base.py  cache_manager.py  document_store.py  fake_index_manager.py  fakes.py  filesystem.py  index_manager.py  metadata.py  models.py  protocols.py  source_metadata.py  sqlalchemy_document_store.py  vector_repository.py  vector_store.py  vectorstore.py
src/rag/testing/: __init__.py  test_factory.py
src/rag/type_stubs/: __init__.py  datasets.pyi  langchain_core.pyi  pdfminer.pyi  unstructured.pyi
src/rag/utils/: __init__.py  answer_utils.py  async_utils.py  clock.py  datetime_utils.py  exceptions.py  logging_utils.py  progress_tracker.py
test_data/: workspace.faiss  workspace.pkl
tests/: .coverage  conftest.py  run_integration_tests.py  run_tests.py
tests/.cache/: index_meta.db
tests/e2e/: test_answer_cli.py  test_golden_set_retrieval.py  test_new_pipeline_e2e.py  test_pipeline_e2e.py
tests/e2e/workflows/: test_cli_e2e_workflow.py  test_complete_rag_workflow.py
tests/fixtures/: generate_pdf_fixture.py  sample_with_headings.md
tests/integration/: README.md  __init__.py  conftest.py  sample.txt  stdio_server_stub.py  test_answer_cli.py  test_cli_json.py  test_cli_json_fast.py  test_cli_mcp.py  test_eval_rag.py  test_extended_workflows.py  test_ingest_split.py  test_lightweight_integration.py  test_mcp_comprehensive.py  test_mcp_server.py  test_mcp_server_api.py  test_mcp_server_integration.py  test_metadata_chunking.py  test_stdio_roundtrip.py  test_workflow.py
tests/integration/storage/: test_faiss_backend.py
tests/integration/workflows/: test_basic_integration.py  test_incremental_updates.py  test_indexing_workflow.py  test_integration_workflows.py  test_query_workflow.py  test_storage_integration.py
tests/prompts/: test_registry.py
tests/static/: __init__.py  test_01_ruff.py  test_02_pyright.py  test_03_vulture.py
tests/unit/: __init__.py  test_auth.py  test_cache_logic.py  test_component_integration.py  test_config.py  test_engine.py  test_engine_incremental.py  test_factory.py  test_ingest.py  test_logging_utils.py  test_mcp_progress.py  test_mcp_server.py  test_mcp_thread_index.py  test_mcp_tools.py  test_progress_callback.py  test_progress_messages.py  test_security.py  test_test_factory.py
tests/unit/chains/: test_rag_chain.py
tests/unit/cli/: test_chunks.py  test_clear.py  test_debug_option.py  test_global_options.py  test_invalidate.py  test_mcp_command.py  test_mcp_servers.py  test_model_options.py  test_output.py  test_prompt_list.py  test_repl.py  test_serve_mcp.py
tests/unit/config/: test_components.py  test_config_integration.py
tests/unit/core_logic/: test_cache_decisions.py  test_chunking_algorithms.py  test_embedding_batching.py  test_query_processing.py
tests/unit/data/: __init__.py  test_document_processor.py  test_text_splitter.py
tests/unit/embeddings/: __init__.py  test_embedding_batcher.py  test_embedding_fakes.py  test_embedding_provider.py  test_embedding_service.py  test_model_map.py
tests/unit/evaluation/: test_retrieval_evaluator.py
tests/unit/integration/: test_pipeline_integration.py
tests/unit/pipeline/: __init__.py  test_factory.py  test_fakes.py  test_models.py  test_pipeline.py  test_processors.py  test_storage.py  test_transitions.py
tests/unit/pipeline_state/: test_factory.py  test_fakes.py  test_models.py  test_pipeline.py  test_processors.py  test_storage.py  test_transitions.py
tests/unit/prompts/: test_registry.py
(+55 files in other folders)
