[project]
name = "rag"
version = "0.1.0"
description = "RAG (Retrieval Augmented Generation) CLI"
authors = [
    { name = "Sam Quigley", email = "quigley@emerose.com" },
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-unstructured>=0.0.1",
    "langchain_core>=0.1.0",
    "langchain_text_splitters>=0.0.1",
    "faiss-cpu>=1.7.4",
    "unstructured[all-docs]>=0.10.0",
    "unstructured[local-inference]>=0.10.0",
    "unstructured[pdf]>=0.10.0",
    "unstructured[docx]>=0.10.0",
    "unstructured[pptx]>=0.10.0",
    "unstructured[xlsx]>=0.10.0",
    "unstructured[csv]>=0.10.0",
    "unstructured[md]>=0.10.0",
    "unstructured[rtf]>=0.10.0",
    "unstructured[odt]>=0.10.0",
    "unstructured[epub]>=0.10.0",
    "python-magic>=0.4.27",
    "docx2txt>=0.8",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "structlog>=24.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "filelock>=3.12.0",
    "aiostream>=0.6.4",
    "pyyaml>=6.0",
    "fastmcp>=2.5.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
rag = "rag.cli.cli:run_cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.0",
    "pytest-socket>=0.6.0",
    "hatch>=1.9.0",
    "httpx>=0.27.0",
    "sphinx>=7.2.0",
    "myst-parser>=2.0.0",
    "furo>=2024.1.29",
    "linkify-it-py>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Only keep formatting and version options here
line-length = 88
# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = [
    # Allow longer lines, which are handled by the formatter
    "E501",   # Line length handled by formatter; long strings are acceptable
    "PLR2004" # Magic numbers are often more readable inline than as named constants
]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rag --cov-report=term-missing"

[tool.setuptools]
packages = ["rag"]
package-dir = {"" = "src"}

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
    ".mypy_cache/",
    "tests/",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "trio>=0.30.0",
]
